--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = { version = "0.10" }
+serenity = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tokio-postgres = "0.7.2"
