--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 serenity = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tokio-postgres = "0.7.2"
+async-trait = "0.1.51"
